--- a/templates/admin/client-management.html
+++ b/templates/admin/client-management.html
@@ -189,6 +189,12 @@
                     <a href="#" class="sidebar-link active">
                         <i class="bi bi-people"></i> Client Management
                     </a>
+                    <a href="/admin/scanners" class="sidebar-link">
+                        <i class="bi bi-shield-check"></i> Scanner Management
+                    </a>
+                    <a href="/admin/leads" class="sidebar-link">
+                        <i class="bi bi-person-plus"></i> Lead Management
+                    </a>
                     <a href="/customize" class="sidebar-link">
                         <i class="bi bi-plus-circle"></i> Create Scanner
                     </a>
