--- a/templates/admin/admin-dashboard.html
+++ b/templates/admin/admin-dashboard.html
@@ -32,6 +32,9 @@
                     <a href="/admin/scanners" class="sidebar-link">
                         <i class="bi bi-shield-check"></i> Scanner Management
                     </a>
+                    <a href="/admin/leads" class="sidebar-link">
+                        <i class="bi bi-person-plus"></i> Lead Management
+                    </a>
                     <a href="/customize" class="sidebar-link">
                         <i class="bi bi-plus-circle"></i> Create Scanner
                     </a>
