--- a/templates/admin/error.html
+++ b/templates/admin/error.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="/static/images/favicon.png.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="stylesheet" href="/static/css/admin-styles.css">
     <style>
         .error-container {
             text-align: center;
@@ -26,7 +26,7 @@
         }
     </style>
 </head>
-<body>
+<body class="admin-view admin-panel">
     <div class="container mt-5">
         <div class="error-container">
             <i class="bi bi-exclamation-triangle-fill error-icon"></i>
