--- a/templates/admin/leads-management.html
+++ b/templates/admin/leads-management.html
@@ -10,9 +10,9 @@
     <link rel="shortcut icon" href="/static/images/favicon.png.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="stylesheet" href="/static/css/admin-styles.css">
 </head>
-<body>
+<body class="admin-view admin-panel">
     <div class="container-fluid">
         <div class="row">
             <!-- Sidebar -->
